# moon_chess

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/mint_board/: board_generator.py  config.json  initial_mint.py
programs/: Cargo.toml
programs/chess_game/: Cargo.toml
programs/chess_game/src/: code_generator.rs  game_state.rs  helpers.rs  lib.rs
programs/combine_boards/: Cargo.toml
programs/combine_boards/src/: lib.rs
programs/mint_board/: board_generator.py  config.json
programs/src/: code_generator.rs  helpers.rs  lib.rs  main.rs  moveprocessor.rs
tests/: moon_chess.ts
